@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1006 2011-05-04 19:33:17 guru Exp $
+	$Id: ChangeLog,v 1.1007 2011-05-04 22:11:31 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-05-04	pwessel
@@ -9,6 +9,7 @@
 	* imgsrc/img2grd_func.c:	Made clear that -D, -I, -T are optional and added
 				-n to change how interpolations are done.  Also allow -S
 				with no scale which will infer scale from filename.
+	* splitxyz_func.c:	Now working, improved -N after gmtconvert's -D.
 
 2011-05-03	pwessel
 	* grdhisteq_func.c:	Now treats input grids as read-only.
